--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,7 @@
       "use": "@vercel/python",
       "config": {
         "maxLambdaSize": "15mb",
-        "runtime": "python3.9",
-        "buildCommand": "mkdir -p certs && echo $SUPABASE_CA_CERTIFICATE_CONTENT > certs/supabase_ca_certificate.pem"
+        "runtime": "python3.9"
       }
     }
   ],
