--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AST Rule Engine",
+  "name": "your-app-name",
   "version": "1.0.0",
   "scripts": {
     "vercel-build": "mkdir -p certs && echo $SUPABASE_CA_CERTIFICATE_CONTENT > certs/supabase_ca_certificate.pem"
